syntax="proto3";

package SmartOffice;

service Humidifier{
    rpc OnHumid (Request) returns (Response) {}
    rpc OffHumid (Request) returns (Response) {}
    rpc ChangeVelocity (Request) returns (Response) {}
}

message Request{
    float Value = 1;
}
message Response{
    bool Status = 1;
}